--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-    <div class="container home">
+    <div class="container">
         <div class="navbar">
             <span>E!Blog</span>
             <ul class="nav justify-content-end">
 
                 <li class="nav-item">
-                    <a class=" nav-link " href="# ">Login</a>
+                    <a class=" nav-link " href="/login ">Login</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link " href="# ">Signup</a>
+                    <a class="nav-link " href="signup ">Signup</a>
                 </li>
 
             </ul>
@@ -29,16 +29,16 @@
             <div class="container blog overflow-hidden ">
                 <div class="row gx-5 ">
                     <div class="col display ">
-                        <div class="p-3 ">
+                        <div class="p-3 first">
                             <img src="../static/images/beauty-removebg-preview.png " width="120 " alt=" ">
                         </div>
                     </div>
                     <div class="col display ">
-                        <div class="p-3 ">
+                        <div class="p-3 second">
                             <img src="../static/images/home-removebg-preview.png " width="160 " alt=" "></div>
                     </div>
                     <div class="col display ">
-                        <div class="p-3 ">
+                        <div class="p-3 third">
                             <img src="../static/images/goodvi-removebg-preview.png " width="165 " alt=" "></div>
                     </div>
                 </div>
@@ -56,15 +56,15 @@
             <div class="container blog overflow-hidden ">
                 <div class="row gx-5 ">
                     <div class="col display ">
-                        <div class="p-3 ">
+                        <div class="p-3 third">
                             <img src="../static/images/fashion-removebg-preview.png " width="125 " alt=" "></div>
                     </div>
                     <div class="col display ">
-                        <div class="p-3 ">
+                        <div class="p-3 first">
                             <img src="../static/images/lovr-removebg-preview.png " width="130 " alt=" "></div>
                     </div>
                     <div class="col display ">
-                        <div class="p-3 ">
+                        <div class="p-3 second">
                             <img src="../static/images/hap-removebg-preview.png " width="140 " alt=" "></div>
                     </div>
                 </div>
