--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container home">
+    <div class="container">
         <div class="navbar">
             <a href="/dashboard"><span>E!Blog</span></a>
             <ul class="nav justify-content-end">
@@ -24,7 +24,7 @@
                     <a href="{{url_for('main.profile',uname=current_user.username)}}">Profile </a></li>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link " href="# ">logout</a>
+                    <a class="nav-link " href="{{ url_for('auth.logout')}}">logout</a>
                 </li>
 
             </ul>
@@ -35,7 +35,7 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 
             <div class="carousel-inner">
-                <div class="carousel-item active first">
+                <div class="carousel-item active">
                     <h3 align-text=center>What is a blog post?</h3>
                     <div class="tip">
                         <div class="tips">
@@ -54,7 +54,7 @@
 
 
                 </div>
-                <div class="carousel-item second">
+                <div class="carousel-item ">
                     <h3>Ideas to Inspire Your Audience</h3>
                     <div class="tip">
                         <div class="tips">
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item third">
+                <div class="carousel-item">
                     <h3>Ideas on Creating Content That Provides Valuable Advice</h3>
                     <div class="tip">
                         <div class="tips">
