--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -17,7 +17,7 @@
                 <a href="{{url_for('main.profile',uname=current_user.username)}}">Profile </a></li>
             </li>
             <li class="nav-item ">
-                <a class="nav-link " href="{{ url_for('auth.logout')}}"></a> ">logout</a>
+                <a class="nav-link " href="{{ url_for('auth.logout')}}">logout</a>
             </li>
 
         </ul>
