--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,4 @@
+{% import "bootstrap/wtf.html" as wtf %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,6 +25,7 @@
                 </li>
 
             </ul>
+
         </div>
         <div class="bor ">
             <div class="container blog overflow-hidden ">
